deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio
  template:
    metadata:
      labels:
        app: gradio
    spec:
      containers:
        - name: gradio
          image: image-registry.openshift-image-registry.svc:5000/gradio-project/gradio-app:latest
          ports:
            - containerPort: 7860
