service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradio-service
spec:
  selector:
    app: gradio
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
